TRESTLE-349: Fixed gravitar alignment. #done

--- a/trestle-server/src/main/webapp/app/NavigationModule/navigation.component.css
+++ b/trestle-server/src/main/webapp/app/NavigationModule/navigation.component.css
@@ -14,10 +14,15 @@
 
 .top-layout {
     height: 10px;
+    vertical-align: middle;
 }
 
 .img-circle {
-    height: 50px;
+    height: 36px;
     border-radius: 50%;
-    margin: 0 10px;
+}
+
+.action-buttons * {
+    vertical-align: middle;
+    padding: 0;
 }
